# notebook

./: LICENSE
.obsidian/: community-plugins.json  workspace.json
_ansys_/: EMS.md  园区CCHP冷热电三联供成熟商业软件完整分类.md  园区冷热电三联供(CCHP)多目标优化全套替代方案.md  园区能源规划与调度两类场景完整方案.md
compute/algorithm/: FCM模糊聚类算法.md  实际项目情况.md  最小树算法.md
compute/c/: C20_预处理.md  C22_头文件保护.md  混合编程Q&A.md
compute/cmake/: CMAKE_基础教程.md
compute/cmake/CMAKE_基础教程_示例/demo_05/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_05/myapp/: CMakeLists.txt  main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_05/mydll/: CMakeLists.txt  myprint.hpp
compute/cmake/CMAKE_基础教程_示例/demo_05/mylib/: CMakeLists.txt  mymath.cpp
compute/cmake/CMAKE_基础教程_示例/demo_06/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_06/myapp/: CMakeLists.txt  main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_06/mydll/: CMakeLists.txt  myprint.cpp
compute/cmake/CMAKE_基础教程_示例/demo_06/mylib/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_07/myapp/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/: CMakeLists.txt  README.md
compute/cmake/CMAKE_基础教程_示例/demo_09/_engine_/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/_engine_/include/: core.hpp
compute/cmake/CMAKE_基础教程_示例/demo_09/_engine_/include/common/: define_demo.hpp  eigen_demo.hpp  spdlog_demo.hpp
compute/cmake/CMAKE_基础教程_示例/demo_09/_engine_/src/: main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_09/_vendor_/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/_vendor_/eigen/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/_vendor_/opencv/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/_vendor_/spdlog/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_09/_vendor_/tomlplusplus/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_20231105/_engine_/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_20231105/_engine_/mylib/: CMakeLists.txt  eigen_sample.cpp  eigen_sample.hpp
compute/cmake/CMAKE_基础教程_示例/demo_20231105/_engine_/src/: core.hpp  main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/_test/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/_test/test/: CMakeLists.txt  cgmath.cpp
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/_vendor_/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/_vendor_/tomlplusplus/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/engine/: CMakeLists.txt
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/engine/include/: pch.hpp
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/engine/include/core/: cgmath.hpp  engine.hpp
compute/cmake/CMAKE_基础教程_示例/demo_3rdlib/engine/src/: main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_imgui/: CMakeLists.txt  premake5.lua
compute/cmake/CMAKE_基础教程_示例/demo_imgui/ImGuiDemoGlad/: CMakeLists.txt  imgui.ini
compute/cmake/CMAKE_基础教程_示例/demo_imgui/ImGuiDemoGlad/src/: PathHelper.h  Widget.cpp  Widget.h  glad.c  main.cpp
compute/cmake/CMAKE_基础教程_示例/demo_imgui/_dependency_/glad/include/glad/: glad.h
compute/cpp/cpp_library_collection/jsoncpp_demo/: CMakeLists.txt
compute/cpp/cpp_library_collection/jsoncpp_demo/resource/: json_sample.jpd  json_sample.json
compute/cpp/cpp_library_collection/jsoncpp_demo/src/: CMakeLists.txt  jsoncpp_handler.hpp  jsoncpp_simple.hpp  jsoncpp_verify.hpp  main.cpp
compute/docker/: Docker-Manim-环境配置手册.md  Docker_AspNetCore部署.md  Docker_前端项目部署.md  Docker基础.md  aspnetcore_docker部署.md
compute/dotnet/: aspnet_webapi.md  dotnet_async.md  dotnet_cli.md
compute/ffmpeg/: FFmpeg简要手册.md
compute/haskell/: haskell.md
compute/python/: Matplotlib应用课程.ipynb  Untitled.ipynb  conda基础.md  data_sample.csv  fastapi_demo.ipynb  numpy_在工程科学应用.ipynb  scipy_essentials.ipynb  scipy在工程科学应用.ipynb  sympy_in_phisics_engnieer.ipynb  sympy在工程科学应用.ipynb  test.ipynb
compute/react/: React入门.md
compute/rust/: rust_get_started.md
compute/sql/: MYSQL操作手册.md
compute/uml/: UML时序图示例.drawio.html  UML用例图示例.drawio.html  UML类图示例.drawio.html
economy/专题/: 金融业行业分析方式与手段.md
economy/投资学-清华大学/: 第一章.md
economy/政治经济学-南开大学/: 10_社会总资本的再生产.md  11_资本主义企业成本利润率平均化和下降趋势.md  12_商业资本和利润.md  13_借贷资本与利息.md  14_资本主义地租.md  6_资本的价值增殖过程.md  9_单个资本的运动.md
education/: Untitled.md  教师资格面试-人教版教材简析.md  软件架构师笔记-复习.md  软件架构师笔记-复习01.md  软件架构师笔记.md  面试结构化.md  面试试讲教案.md
language/spanish/: README.md
math/python设计控制系统/: 控制系统-00-TEST.ipynb  控制系统-03-控制系统建模.ipynb  控制系统-04-被控对象行为.ipynb  控制系统-05-闭环系统控制.ipynb  控制系统-06-开环系统控制.ipynb
math/专题/: FCAD曲率演示.20231001-131414.FCBak  FCAD曲率演示.FCStd  Matplotlib应用课程.html  numpy_在工程科学应用.html  scipy在工程科学应用.html  sympy在工程科学应用.html  伽辽金方法专题.md  几何代数导论.md  动态模态分解DMD.md  卡尔曼滤波.md  常用曲线导论.md  曲线导论作图.excalidraw  计算流体力学常用方程.md
math/偏微分方程-youtube/: 01_PDE导论.md  02_PDE辅助条件.md  03_抛物型方程简介.md  05_非齐次边界扩散方程.md
math/偏微分方程-可汗学院/: 02_PDE辅助条件.md  03_抛物型方程简介.md  04_扩散问题_齐次边界.md  05_扩散问题_非齐次边界_分解法.md  06_扩散问题_非齐次边界_扩展.md
math/向量微积分-华盛顿大学/: 01_梯度散度旋度.md  02_高斯散度定理.md
math/工程数学-逢甲大学/: 01_微分方程分类.md  02_常微分方程原函数.md  03_常微分方程解.md  04_二阶常微分方程.md  05_高阶常微分方程.md  06_拉普拉斯转换.md  07_拉普拉斯特性.md  08_拉普拉斯逆转换.md
math/工程数学基础/: 01_特征值与特征向量.md  02_线性化与泰勒级数.md  03_卷积与冲击相应.md  05_欧拉公式证明.md  附录_卷积的拉普拉斯变换.md  附录_雅各比矩阵来源.md
math/应用数学入门-南京大学/: 南京大学-近代应用数学-群论.md
math/应用数学入门-国立清华大学/: 1-1-Complex.md  1-1-complex.excalidraw  1-2-Partial-Derivative.excalidraw  1-2-Partial-Derivative.md  1-3-Linear-Algebra.excalidraw  1-3-Linear-Algebra.md  1-4-Fourier-Transform.md  1-5-Vector-Calculus.md  Appendix-Fourier-Transform-Derivation.md  picture.excalidraw  temp.md
math/微分几何/: 微分几何_01_预备知识.md  微分几何_02_向量代数微分学.md  微分几何_03_空间曲线定义.md  微分几何_04_切向量和弧长公式.md  微分几何_05_曲率和Frenet标架.md  微分几何_06_挠率和Frenet公式.md
math/微分方程与动力学-华盛顿大学/: 10_二阶ODE-求谐振子的四种方式.md  12_二阶ODE-弹簧质量阻尼器.md  14_更高阶ODE.md  16_矩阵指数与对角化.md  18_线性系统相图分类与复特征值分析.md  20_稳定性和线性.md  22_非线性系统固定点线性分析.md  23_势阱中粒子.md  24_势阱中粒子.md  26_哈特曼格罗布曼.md  28_非线性瞬态特征.md  30_有强迫项的微分方程.md  32_线性时不变系统.md  41_数值微分.md  42_数值积分.md  43_常微分方程数值模拟.md
math/控制训练营-华盛顿大学/: 01_导论.md  02_线性系统.md  02_线性系统_补充推导.md  03_固定点线性化.md  04_线性可控性.md
math/数学物理方法-上海大学/: 01_复变函数.md
math/数学物理方法-快速/: 01_常微分方程.md  (+6 more)
physics/: CommonSymbols.md
software/: 虚幻4教程笔记第1-4.5课 .txt
(+334 files in other folders)
